--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+  <head>
+    <title>
+           Titular Head
+    </title>
+  </head>
   <body>
     Hello there, @GeorgeTechnology!
   </body>
