--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     </title>
   </head>
   <body>
+    <h1>
+      Section the First
+    </h1>
     Hello there, @GeorgeTechnology!
   </body>
 </html>
