--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
       Section the First
     </h1>
     Hello there, @GeorgeTechnology!
+    <img src="https://avatars2.githubusercontent.com/u/46536107?v=4">
   </body>
 </html>
