--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <title>
-           Titular Head
+           Technical Resume
     </title>
   </head>
   <body>
     <h1>
-      Section the First
+      Resume
     </h1>
     Hello there, @GeorgeTechnology!
     <img src="https://avatars2.githubusercontent.com/u/46536107?v=4">
