--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       Resume
     </h1>
     Hello there, @GeorgeTechnology!
-    <img src="https://avatars2.githubusercontent.com/u/46536107?v=4">
+    <img src="https://github.com/GeorgeTechnology/about-me/blob/master/Capture.JPG?raw=true">
     
     <ol>
     <li>This</li>
